
More information on each of the fixes can be found in the project 
development home at https://projectes.lafarga.cat/projects/jclicmoodle

Changes in progress
---------------------------------------------------------------------------------------
- Updated Euskara translation (downloaded from AMOS) 
- Reviewed English translation (thanks to German Valero!)


Changes in 0.2.2 (2012/08/24)
---------------------------------------------------------------------------------------
- Added Brazilian translation
- Added Galician translation
- Fixed some bugs related with importation from Moodle 1.9
- Solved some 'Strict standards' warnings
- Adapted code for Moodle 2.3 (like addinstance capability)


Changes in 0.2.1 (2012/06/05)
---------------------------------------------------------------------------------------
- First version of the jclic module for Moodle 2.


Changes in 0.1.0.11 (2011/05/25)
---------------------------------------------------------------------------------------
- Added language parameter to the activity edition page to let specify the player language (http://projectes.lafarga.cat/projects/jclicmoodle/tracker/291/1641/detail)
- Added exiturl parameter to the activity edition page to let specify exit URL (http://projectes.lafarga.cat/projects/jclicmoodle/tracker/291/1287/detail)
- Revised information showed in summary
- Solved problem when moodle is installed in the root (without path in the URL)
- Added jclic_scale_used_anywhere function sended by David Monllao from URV to improve the performance of the module
- Fixed warnings when restoring jclic activities (http://projectes.lafarga.cat/projects/jclicmoodle/tracker/288/1200/detail)
- Fixed bug with single quote reported to Moodle tracker (http://tracker.moodle.org/browse/CONTRIB-2079?page=com.atlassian.jira.plugin.system.issuetabpanels%3Acvs-tabpanel)
- Fixed warning message when there were no users in the course (http://projectes.lafarga.cat/projects/jclicmoodle/tracker/288/1335/detail)